tests/machine/x/kotlin/load_yaml.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/load_yaml.kt:14:33: error: only safe (?.) or non-null asserted (!!.) calls are allowed on a nullable receiver of type String?
                    while (clean.startsWith("../")) clean = clean.substring(3)
                                ^
/workspace/mochi/tests/machine/x/kotlin/load_yaml.kt:14:66: error: only safe (?.) or non-null asserted (!!.) calls are allowed on a nullable receiver of type String?
                    while (clean.startsWith("../")) clean = clean.substring(3)
                                                                 ^
